# Bosch-BSEC2-Library

./: CMakeLists.txt  LICENSE.md  README.md  extra_script.py  keywords.txt  library.json  library.properties
examples/bme68x_demo_sample/: Quick_Start_Guide.md  ble_controller.cpp  ble_controller.h  bme68x_datalogger.cpp  bme68x_datalogger.h  bme68x_demo_sample.ino  bsec_datalogger.cpp  bsec_datalogger.h  commMux.cpp  commMux.h  demo_app.h  label_provider.cpp  label_provider.h  led_controller.cpp  led_controller.h  sensor_manager.cpp  sensor_manager.h  utils.cpp  utils.h
examples/generic_examples/: Readme.md
examples/generic_examples/basic/: basic.ino  basic_webgui
examples/generic_examples/basic_config_state/: basic_config_state.ino
examples/generic_examples/basic_idf/: platformio.ini
examples/generic_examples/basic_idf/src/: main.cpp
examples/x8_board_examples/: Readme.md
examples/x8_board_examples/basic/: basic.ino  commMux.cpp  commMux.h
examples/x8_board_examples/basic_config_state/: basic_config_state.ino  commMux.h
src/: bsec2.cpp  bsec2.h
src/commMux/: commMux.cpp  commMux.h
src/config/Default_H2S_NonH2S/: Default_H2S_NonH2S.c  Default_H2S_NonH2S.h
src/config/FieldAir_HandSanitizer/: FieldAir_HandSanitizer.c  FieldAir_HandSanitizer.h  bsec_selectivity.config  bsec_selectivity.csv  bsec_selectivity.txt
src/config/bme680/bme680_iaq_18v_300s_28d/: bsec_iaq.config  bsec_iaq.csv  bsec_iaq.txt
src/config/bme680/bme680_iaq_18v_300s_4d/: bsec_iaq.csv  (+2 more)
src/esp8266/: modlib.sh
src/inc/: bsec_datatypes.h  bsec_interface.h  bsec_interface_multi.h
(+45 files in other folders)
